page object pattern and factory bot

--- a/i-rock/Gemfile
+++ b/i-rock/Gemfile
@@ -38,6 +38,7 @@ gem 'puma'
 # Make views pretty
 gem 'bootstrap-sass', '~> 3.4.1'
 gem 'sassc-rails', '>= 2.1.0'
+gem 'redcarpet'
 
 # Conveniece
 gem 'simple_form'
