--- a/i-rock/Gemfile
+++ b/i-rock/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.2.2'
+gem 'rails', '4.2.3'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '1.3.13'
 # Use SCSS for stylesheets
@@ -42,6 +42,9 @@ gem 'redcarpet'
 
 # Conveniece
 gem 'simple_form'
+
+# Auth
+gem 'devise'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
