--- a/i-rock/Gemfile
+++ b/i-rock/Gemfile
@@ -69,4 +69,5 @@ group :test do
   gem 'capybara'
   gem 'cucumber-rails', require: false
   gem 'database_cleaner'
+  gem 'shoulda-matchers', require: false
 end
